--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- YEH RAHA AAPKA NAAM -->
         <h1 class="player-title">MJ Player</h1>
 
-        <img src="./default.jpg" id="song-image" alt="Album Art">
+        <img src="./musics jagat.jpeg" id="song-image" alt="Album Art">
         <div id="song-title" class="song-title">Player Load Ho Raha Hai...</div>
         
         <audio id="audio-player"></audio>
