--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="player-title">MJ Player</h1>
 
         <!-- 2. IMAGE KA SAHI NAAM (BINA SPACE KE) -->
-        <img src="./musicsjagat.jpeg" id="song-image" alt="Album Art">
+        <img src="musicsjagat (1).jpeg" id="song-image" alt="Album Art">
         
         <div id="song-title" class="song-title">Player Load Ho Raha Hai...</div>
         
