--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- ================== NAYA SECTION 1: LOGO ================== -->
         <div class="logo-container">
             <!-- Yahan apne logo ki file ka sahi naam daalein -->
-            <img src="./my-logo.png" alt="MJ Player Logo" class="player-logo">
+            <img src="./mjlogo.png" alt="MJ Player Logo" class="player-logo">
         </div>
         <!-- ========================================================== -->
 
@@ -41,7 +41,8 @@
 
         <!-- ============ NAYA SECTION 2: AD SPACE ============= -->
         <div class="ad-space">
-            <!-- Adsterra ka code ya affiliate banner yahan daalein -->
+            <script async="async" data-cfasync="false" src="//pl26953775.profitableratecpm.com/e54c93f45e444a48f6cc1cbbd07d09d2/invoke.js"></script>
+<div id="container-e54c93f45e444a48f6cc1cbbd07d09d2"></div>
             <p style="color: #666; font-size: 14px;">Advertisement</p>
         </div>
         <!-- ===================================================== -->
