--- a/index.html
+++ b/index.html
@@ -52,5 +52,9 @@
     
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="./script.js"></script>   
+</div>
+<script async="async" data-cfasync="false" src="//pl26953775.profitableratecpm.com/e54c93f45e444a48f6cc1cbbd07d09d2/invoke.js"></script>
+<div id="container-e54c93f45e444a48f6cc1cbbd07d09d2"></div>
+    </div>
 </body>
 </html>
