--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             
             <h1 class="player-title">MJ Player</h1>
 
-            <!-- Aapki di hui PNG image yahan lagegi -->
+            <!-- Aapki image ka naam 'mjlogo.png' kar diya gaya hai -->
             <img src="./mjlogo.png" id="song-image" alt="Album Art">
 
             <div id="song-title" class="song-title">Player Load Ho Raha Hai...</div>
@@ -31,30 +31,27 @@
 
             <div class="youtube-input-group">
                 <input type="text" id="youtube-url" placeholder="YouTube Player taiyar ho raha hai..." disabled>
-                <!-- Button ka text 'Play' se 'Add' kar diya gaya hai -->
                 <button id="add-yt-btn" disabled>Add</button>
             </div>
         </div>
 
-        <!-- ============ NAYA PLAYLIST MENU ============= -->
         <div class="playlist-container">
             <h2 class="playlist-title">Playlist</h2>
             <ul id="playlist-list">
                 <!-- Playlist ke gaane yahan aayenge -->
             </ul>
-            </div>
-        <div class=ad-space">
-    <script async="async" data-cfasync="false" src="//pl26953775.profitableratecpm.com/e54c93f45e444a48f6cc1cbbd07d09d2/invoke.js"></script>
-<div id="container-e54c93f45e444a48f6cc1cbbd07d09d2"></div>
         </div>
+
+        <!-- =========== AD SPACE (SAHI JAGAH PAR) ============= -->
+        <div class="ad-space">
+            <!-- Aapka Adsterra Ad Code Yahan Daala Gaya Hai -->
+            <script async="async" data-cfasync="false" src="//pl26953775.profitableratecpm.com/e54c93f45e444a48f6cc1cbbd07d09d2/invoke.js"></script>
+            <div id="container-e54c93f45e444a48f6cc1cbbd07d09d2"></div>
         </div>
-        <!-- ============================================= -->
-    
+        <!-- ====================================================== -->
+    </div>
+
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="./script.js"></script>   
-</div>
-<script async="async" data-cfasync="false" src="//pl26953775.profitableratecpm.com/e54c93f45e444a48f6cc1cbbd07d09d2/invoke.js"></script>
-<div id="container-e54c93f45e444a48f6cc1cbbd07d09d2"></div>
-    </div>
 </body>
 </html>
