--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a id="download-link" href="#" class="download-button" download>Download</a>
 
             <div class="youtube-input-group">
-                <input type="text" id="youtube-url" placeholder="YouTube Player taiyar ho raha hai..." disabled>
-                <button id="add-yt-btn" disabled>Add</button>
+                <input type="text" id="youtube-url" placeholder="Add your YT song link here..." disabled>
+                <button id="add-yt-btn" disabled>Add song</button>
             </div>
         </div>
 
