--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
     <div class="main-container">
         <div class="music-player-container">
             
-            <h1 class="player-title">MJ Player</h1>
+            <!-- Naya Header jismein Title aur Menu Icon hai -->
+            <div class="player-header">
+                <h1 class="player-title">MJ Player</h1>
+                <div class="category-menu">
+                    <button id="category-menu-btn" class="nav-button">☰</button>
+                    <div id="category-dropdown" class="dropdown-content">
+                        <!-- Categories yahan JavaScript se aayengi -->
+                    </div>
+                </div>
+            </div>
 
-            <!-- Aapki image ka naam 'mjlogo.png' kar diya gaya hai -->
             <img src="./mjlogo.png" id="song-image" alt="Album Art">
 
             <div id="song-title" class="song-title">Player Load Ho Raha Hai...</div>
@@ -42,13 +50,10 @@
             </ul>
         </div>
 
-        <!-- =========== AD SPACE (SAHI JAGAH PAR) ============= -->
         <div class="ad-space">
-            <!-- Aapka Adsterra Ad Code Yahan Daala Gaya Hai -->
             <script async="async" data-cfasync="false" src="//pl26953775.profitableratecpm.com/e54c93f45e444a48f6cc1cbbd07d09d2/invoke.js"></script>
             <div id="container-e54c93f45e444a48f6cc1cbbd07d09d2"></div>
         </div>
-        <!-- ====================================================== -->
     </div>
 
     <script src="https://www.youtube.com/iframe_api"></script>
